wip: creating basic layout for post feed

--- a/src/app/components/posts/post-card/PostCard.module.scss
+++ b/src/app/components/posts/post-card/PostCard.module.scss
@@ -5,7 +5,7 @@
 	width: 100%;
 	border-bottom: 1px solid $lighter;
 	padding: 15px;
-	font-size: $fontSizeMd;
+	font-size: $fontSizeLg;
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
