--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -3,8 +3,11 @@ $lighter: #36393e;
 $dark: #282b30;
 $darker: #1e2124;
 $accent: #7289da;
+$border: #5a5f6b;
 
 $fontSizeXs: 10px;
 $fontSizeSm: 12px;
 $fontSizeMd: 13px;
 $fontSizeLg: 15px;
+
+$lightText: lighten($lighter, 50%);
