feat: added photos and gifs to post

--- a/src/app/components/posts/post-card/PostCard.module.scss
+++ b/src/app/components/posts/post-card/PostCard.module.scss
@@ -9,4 +9,31 @@
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
+	.postPhoto,
+	.postGif {
+		max-height: 400px;
+		position: relative;
+		// border: 1px solid $border;
+		max-width: 100%;
+
+		img {
+			max-height: 400px;
+			position: relative !important;
+			width: 100%;
+			border-radius: 4px;
+			object-fit: cover;
+			cursor: zoom-in;
+		}
+	}
+	.postGif {
+		max-height: 600px;
+		img {
+			max-height: 600px;
+			position: relative !important;
+			width: 100%;
+			border-radius: 4px;
+			object-fit: cover;
+			cursor: zoom-in;
+		}
+	}
 }
