wip: adding post menu

--- a/src/app/components/posts/post-card/post-card-header/PostCardHeader.module.scss
+++ b/src/app/components/posts/post-card/post-card-header/PostCardHeader.module.scss
@@ -17,10 +17,17 @@
 			font-size: $fontSizeMd;
 		}
 	}
-	.createdAt {
+	.menu {
 		margin-left: auto;
-		color: $lightText;
-		font-weight: 300;
-		font-size: $fontSizeMd;
+		display: flex;
+		gap: 5px;
+		.createdAt {
+			color: $lightText;
+			font-weight: 300;
+			font-size: $fontSizeMd;
+		}
+		svg {
+			cursor: pointer;
+		}
 	}
 }
