wip: adding login and register

--- a/src/app/components/user/login/Login.module.scss
+++ b/src/app/components/user/login/Login.module.scss
@@ -7,6 +7,8 @@
 	justify-content: center;
 	width: 600px;
 	margin: 0 auto;
+	position: relative;
+	z-index: 9999;
 	.authContainer {
 		background-color: $dark;
 		max-width: 400px;
