--- a/src/app/login/Page.module.scss
+++ b/src/app/login/Page.module.scss
@@ -2,6 +2,13 @@
 @use '../styles/variables' as *;
 
 .page {
-	width: 100vw;
+	min-width: 100vw;
+	position: fixed;
+	top: 0;
+	left: 0;
 	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: $darker;
 }
