--- a/src/app/components/user/auth/Auth.module.scss
+++ b/src/app/components/user/auth/Auth.module.scss
@@ -8,7 +8,7 @@
 		padding-top: 1.2rem;
 		font-size: 12px;
 		color: lightgray;
-		padding: 10px;
+		padding: 10px 0;
 		margin-top: 1rem;
 	}
 	.authButtons {
