--- a/src/app/components/posts/post-card/post-card-menu/PostCardMenu.module.scss
+++ b/src/app/components/posts/post-card/post-card-menu/PostCardMenu.module.scss
@@ -8,7 +8,9 @@
 	top: 0;
 }
 .postCardMenu {
-	background-color: $light;
+	background-color: #d9e1e8;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
 	color: $dark;
 	height: fit-content;
 	padding: 5px 0;
