--- a/src/app/components/user/current-user-box/CurrentUserBox.module.scss
+++ b/src/app/components/user/current-user-box/CurrentUserBox.module.scss
@@ -2,12 +2,13 @@
 
 .currentUserBox {
 	width: 100%;
-	height: 95px;
+	height: fit-content;
 	display: flex;
 	gap: 10px;
 	color: $light;
 	padding-top: 10px;
-	margin-top: 10px;
+	margin: 10px 0;
+	margin-bottom: 20px;
 	position: relative;
 	.displayName {
 		display: flex;
@@ -38,7 +39,8 @@
 	top: 0;
 }
 .currentUserMenu {
-	background-color: $light;
+	background-color: #d9e1e8;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 	color: $dark;
 	height: fit-content;
 	padding: 5px 0;
