--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -11,3 +11,18 @@
 	color: $light;
 	padding-bottom: 2rem;
 }
+
+@mixin overlay() {
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	overflow-x: hidden;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 99 !important;
+	outline: none;
+	background-color: rgba(3, 3, 3, 0.3);
+}
