--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -4,7 +4,7 @@ $dark: #282b30;
 $darker: #1e2124;
 $accent: #7289da;
 $border: #5a5f6b;
-
+$test: #707174;
 $fontSizeXs: 10px;
 $fontSizeSm: 12px;
 $fontSizeMd: 13px;
