--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -2,42 +2,54 @@
 
 .match {
 	padding: 2rem 1rem;
-	background-color: lighten($dark, 5%);
-	display: flex;
-	align-items: center;
-	font-size: $fontSizeMd;
-	justify-content: space-between;
-	border-bottom: 1px solid $border;
-	color: $light;
-	text-decoration: none;
-	&:hover {
-		background-color: lighten($dark, 10%);
-		cursor: pointer;
+	// background-color: lighten($dark, 10%);
+
+	max-width: 100%;
+	flex: 1 1 calc(50% - 20px);
+	position: relative;
+	transition: all 200ms ease-in-out;
+
+	&:nth-of-type(odd) {
+		&::after {
+			width: 1px;
+			background: $border;
+			top: 35px;
+			bottom: 35px;
+			right: -0px;
+			position: absolute;
+			content: '';
+			z-index: 999;
+		}
 	}
-	.teams {
+	.content {
+		padding: 10px;
+		text-decoration: none;
+		color: $light;
 		display: flex;
-		align-items: center;
-		justify-content: space-evenly;
-		width: 70%;
+		flex-direction: column;
 		gap: 10px;
-		.team {
-			.home,
-			.away {
-				display: flex;
-				align-items: center;
-				gap: 10px;
+		height: 134px;
+		justify-content: center;
+		&:hover {
+			background-color: lighten($dark, 5%);
+		}
+		.lowerTeam,
+		.upperTeam {
+			display: flex;
+			align-items: center;
+			gap: 10px;
+
+			strong {
+				font-weight: 500;
 			}
-			.home {
-				strong {
-					width: 75px;
-					text-align: right;
-				}
+			span {
+				font-size: $fontSizeXs;
+				position: relative;
+				top: -5px;
+				left: -5px;
 			}
-			.away {
-				strong {
-					width: 75px;
-					text-align: left;
-				}
+			.score {
+				margin-left: auto;
 			}
 		}
 	}
