--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -2,8 +2,7 @@
 
 .match {
 	padding: 2rem 1rem;
-	// background-color: lighten($dark, 10%);
-
+	border-bottom: 1px solid $border;
 	max-width: 100%;
 	flex: 1 1 calc(50% - 20px);
 	position: relative;
