--- a/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
+++ b/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
@@ -1,3 +1,17 @@
+@use '../../../styles/variables' as *;
+
+.dates {
+	display: flex;
+	gap: 10px;
+	padding: 10px;
+	span {
+		outline: 1px solid $border;
+		padding: 4px;
+		border-radius: 22px;
+		font-size: $fontSizeSm;
+	}
+}
+
 .feed {
 	display: flex;
 	flex-flow: row wrap;
