--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -13,16 +13,15 @@
 }
 
 @mixin overlay() {
-	justify-content: center;
-	align-items: center;
-	display: flex;
-	overflow-x: hidden;
+	min-width: 100vw;
 	position: fixed;
 	top: 0;
-	right: 0;
-	bottom: 0;
 	left: 0;
-	z-index: 99 !important;
-	outline: none;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: $darker;
+	z-index: 999999;
 	background-color: rgba(3, 3, 3, 0.3);
 }
