--- a/src/app/components/modals/bet-slip/BetSlip.module.scss
+++ b/src/app/components/modals/bet-slip/BetSlip.module.scss
@@ -105,5 +105,17 @@
 				font-size: 28px;
 			}
 		}
+		.text {
+			width: 100%;
+			height: 100px;
+			margin-top: 10px;
+			textarea {
+				width: 100%;
+				height: 100px;
+				border: 1px solid lightgray;
+				resize: none;
+				padding: 10px;
+			}
+		}
 	}
 }
