--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -20,6 +20,12 @@
 			z-index: 999;
 		}
 	}
+
+	&:nth-last-of-type(odd) {
+		&::after {
+			display: none;
+		}
+	}
 	.content {
 		padding: 10px;
 		text-decoration: none;
@@ -29,6 +35,7 @@
 		gap: 10px;
 		height: 134px;
 		justify-content: center;
+		transition: all 200ms ease-in-out;
 		&:hover {
 			background-color: lighten($dark, 5%);
 		}
