--- a/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
+++ b/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
@@ -10,16 +10,25 @@
 	display: flex;
 	gap: 10px;
 	padding: 10px 1rem;
+	padding-bottom: 2rem;
+	border-bottom: 1px solid $border;
+
 	span,
 	.activeDate {
 		outline: 1px solid $border;
-		padding: 6px 12px;
+		padding: 10px 14px;
 		border-radius: 22px;
 		font-size: $fontSizeSm;
 		cursor: pointer;
+		transition: all 200ms ease-in-out;
+
+		&:hover {
+			background-color: lighten($dark, 5%);
+			color: $light;
+		}
 	}
 	.activeDate {
-		outline: 1px solid $accent;
+		background-color: lighten($dark, 5%);
 		color: $light;
 	}
 }
