--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -3,7 +3,7 @@ $lighter: #36393e;
 $dark: #282b30;
 $darker: #1e2124;
 $accent: #7289da;
-$border: #5a5f6b;
+$border: #3e3e42;
 $test: #707174;
 $fontSizeXs: 10px;
 $fontSizeSm: 12px;
