--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @use './variables' as *;
+@use './breakpoints' as *;
 
 @mixin page {
 	flex-grow: 1;
@@ -10,6 +11,9 @@
 	padding-top: 0;
 	color: $light;
 	padding-bottom: 2rem;
+	@include breakpoint(xs) {
+		max-width: calc(100vw - 17px);
+	}
 }
 
 @mixin overlay() {
