--- a/src/app/components/modals/bet-slip/BetSlip.module.scss
+++ b/src/app/components/modals/bet-slip/BetSlip.module.scss
@@ -16,7 +16,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 5px;
-	margin-top: 1rem;
+	margin-top: 5px;
 	.imageWrapper {
 		border: 1px solid lightgray;
 		display: flex;
