--- a/src/app/components/nav/Nav.module.scss
+++ b/src/app/components/nav/Nav.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/breakpoints' as *;
 
 .nav {
 	width: 100%;
@@ -20,6 +21,7 @@
 			display: flex;
 			gap: 10px;
 			align-items: center;
+
 			svg {
 				font-size: 16px;
 			}
