--- a/src/app/components/posts/post-card/post-card-header/PostCardHeader.module.scss
+++ b/src/app/components/posts/post-card/post-card-header/PostCardHeader.module.scss
@@ -21,6 +21,9 @@
 		margin-left: auto;
 		display: flex;
 		gap: 5px;
+		align-items: center;
+		height: fit-content;
+		position: relative;
 		.createdAt {
 			color: $lightText;
 			font-weight: 300;
