--- a/src/app/components/posts/post-card/post-card-menu/PostCardMenu.module.scss
+++ b/src/app/components/posts/post-card/post-card-menu/PostCardMenu.module.scss
@@ -17,7 +17,8 @@
 	width: 140px;
 	border-radius: 4px;
 	position: absolute;
-	right: 30px;
+	right: 15px;
+	top: 3px;
 	font-size: $fontSizeSm;
 	z-index: 99;
 	.option {
