--- a/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
+++ b/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .header {
 	text-transform: uppercase;
@@ -37,4 +38,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	flex: 1;
+	@include breakpoint(xs) {
+		flex-flow: column;
+	}
 }
