--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -10,7 +10,7 @@
 		max-width: 600px;
 		display: block;
 		@include breakpoint(xs) {
-			max-width: calc(100vw - 17px);
+			max-width: 100vw;
 		}
 	}
 }
