--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -12,7 +12,7 @@
 	color: $light;
 	padding-bottom: 2rem;
 	@include breakpoint(xs) {
-		max-width: calc(100vw - 17px);
+		max-width: 100vw;
 	}
 }
 
