--- a/src/app/components/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed-header/FeedHeader.module.scss
@@ -9,12 +9,18 @@
 	border-bottom: 1px solid $border;
 	padding-top: 20px;
 	background-color: $darker;
+	transition: all 100ms ease-in-out;
+	@include breakpoint(sm) {
+		padding-top: 0;
+		width: 100vw;
+	}
 	@include breakpoint(xs) {
 		padding-top: 0;
 	}
 	.header {
 		background-color: lighten($dark, 7%);
 		height: 45px;
+
 		@include breakpoint(xs) {
 			height: 55px;
 		}
@@ -25,22 +31,33 @@
 		background-color: $dark;
 		.mobile {
 			display: none;
+			margin-left: auto;
+
+			align-items: center;
+			border: 1px solid $border;
+			padding: 4px 8px;
+			border-radius: 22px;
+			background-color: lighten($dark, 5%);
+			cursor: pointer;
+			gap: 5px;
+			img {
+				max-width: 20px;
+				max-height: 20px;
+				border-radius: 50% !important;
+				outline: 1px solid $light;
+			}
 			@include breakpoint(xs) {
 				display: flex;
-				margin-left: auto;
-				gap: 10px;
-				align-items: center;
-				border: 1px solid $border;
-				padding: 4px 8px;
-				border-radius: 22px;
-				background-color: lighten($dark, 5%);
-				cursor: pointer;
-
-				img {
-					max-width: 20px;
-					max-height: 20px;
-					border-radius: 50% !important;
-					outline: 1px solid $light;
+			}
+			@include breakpoint(sm) {
+				display: flex;
+			}
+			strong {
+				color: $light;
+				font-weight: 500;
+				font-size: $fontSizeSm;
+				@include breakpoint(xs) {
+					display: none;
 				}
 			}
 			button {
@@ -52,6 +69,7 @@
 				}
 			}
 			svg {
+				margin-left: 10px;
 			}
 		}
 
