--- a/src/app/components/navigation-panel/NavigationPanel.module.scss
+++ b/src/app/components/navigation-panel/NavigationPanel.module.scss
@@ -1,24 +1,26 @@
 @use '../../styles/variables' as *;
 @use '../../styles/breakpoints' as *;
 
-.nav {
-	width: 100%;
-	height: 60vh;
-	margin-top: 10px;
-	padding: 0 10px;
+.navigationPanel {
+	height: calc(100vh - 45px);
+	max-width: 320px;
+	width: 320px;
+	background-color: $dark;
+	border-left: 1px solid $border;
+	position: sticky;
+	top: 45px;
+	display: none;
+	background-color: lighten($dark, 5%);
 	@include breakpoint(sm) {
 		display: flex;
 	}
-	.logo {
-		height: 45px;
-		display: flex;
-		align-items: center;
-		font-size: 22px;
-		color: $light;
+	@include breakpoint(xs) {
+		display: none;
 	}
 	.links {
 		display: flex;
 		flex-direction: column;
+		padding: 10px 1rem;
 		.link {
 			padding: 20px 0;
 			display: flex;
