--- a/src/app/components/search/Search.module.scss
+++ b/src/app/components/search/Search.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/breakpoints' as *;
 
 .inputContainer {
 	background-color: $dark;
@@ -6,6 +7,10 @@
 	width: 100%;
 	margin-top: 10px;
 	position: relative;
+	transition: all 200ms ease-in-out;
+	@include breakpoint(sm) {
+		margin-top: 0;
+	}
 	input {
 		height: 45px;
 		width: 100%;
