wip: fixing sportsbook page

--- a/src/app/components/modals/not-logged-in/NotLoggedInModal.module.scss
+++ b/src/app/components/modals/not-logged-in/NotLoggedInModal.module.scss
@@ -3,6 +3,8 @@
 	flex-direction: column;
 	gap: 10px;
 	padding-bottom: 1rem;
+	justify-content: center;
+	flex: 1;
 	strong {
 		font-size: 22px;
 	}
