--- a/src/app/components/feed-header/FeedHeader.module.scss
+++ b/src/app/components/feed-header/FeedHeader.module.scss
@@ -44,7 +44,7 @@
 				max-width: 20px;
 				max-height: 20px;
 				border-radius: 50% !important;
-				outline: 1px solid $light;
+				border: 1px solid $light;
 			}
 			@include breakpoint(xs) {
 				display: flex;
