--- a/src/app/components/modals/Modal.module.scss
+++ b/src/app/components/modals/Modal.module.scss
@@ -1,5 +1,6 @@
 @use '../../styles/mixins' as *;
 @use '../../styles/variables' as *;
+@use '../../styles/breakpoints' as *;
 
 .overlay {
 	@include overlay();
@@ -11,12 +12,16 @@
 	max-width: 500px;
 	min-width: 500px;
 	padding: 1rem;
-	border-radius: 12px;
+	border-radius: 4px;
 	background-color: $light;
 	color: $dark;
 	transition: 300ms ease-in-out;
 	opacity: 1;
 	height: fit-content;
+	@include breakpoint(xs) {
+		min-width: 100%;
+		height: 100vh;
+	}
 	.header {
 		width: 100%;
 		display: flex;
