--- a/src/app/components/sportsbook/match-details/MatchDetails.module.scss
+++ b/src/app/components/sportsbook/match-details/MatchDetails.module.scss
@@ -120,7 +120,7 @@
 				gap: 1rem;
 				span {
 					width: 74px;
-					outline: 1px solid $border;
+					border: 1px solid $border;
 					display: flex;
 					justify-content: center;
 					border-radius: 22px;
