--- a/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
+++ b/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
@@ -16,7 +16,7 @@
 
 	span,
 	.activeDate {
-		outline: 1px solid $border;
+		border: 1px solid $border;
 		padding: 10px 14px;
 		border-radius: 22px;
 		font-size: $fontSizeSm;
