--- a/src/app/components/user/login/Login.module.scss
+++ b/src/app/components/user/login/Login.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .page {
 	height: 100vh;
@@ -9,6 +10,10 @@
 	margin: 0 auto;
 	position: relative;
 	z-index: 9999;
+	@include breakpoint(xs) {
+		width: 100vw;
+		height: 100vh;
+	}
 	.authContainer {
 		background-color: $dark;
 		max-width: 400px;
@@ -18,11 +23,17 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
+		@include breakpoint(xs) {
+			width: 100vw;
+			height: 100vh;
+			justify-content: center;
+		}
 		.header {
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
 			margin-bottom: 20px;
+
 			h1 {
 				font-size: 22px;
 			}
