--- a/src/app/components/sportsbook/match-details/breakdown/Breakdown.module.scss
+++ b/src/app/components/sportsbook/match-details/breakdown/Breakdown.module.scss
@@ -22,7 +22,8 @@
 			display: flex;
 			border-radius: 12px;
 			overflow: hidden;
-			height: 15px;
+			height: 10px;
+			border: 1px solid $border;
 			.leftPercent {
 				background-color: $accent;
 				height: 100%;
