--- a/src/app/components/user/login/Login.module.scss
+++ b/src/app/components/user/login/Login.module.scss
@@ -10,13 +10,14 @@
 	margin: 0 auto;
 	position: relative;
 	z-index: 9999;
+
 	@include breakpoint(xs) {
 		width: 100vw;
 		height: 100vh;
 	}
 	.authContainer {
-		background-color: $dark;
-		max-width: 400px;
+		background-color: $darker;
+		max-width: 500px;
 		padding: 2rem;
 		color: $light;
 		border-radius: 4px;
@@ -35,10 +36,10 @@
 			margin-bottom: 20px;
 
 			h1 {
-				font-size: 22px;
+				font-size: 26px;
 			}
 			p {
-				font-size: $fontSizeSm;
+				font-size: 16px;
 				span {
 					color: lightgray;
 					font-weight: 500;
@@ -75,9 +76,13 @@
 
 				a {
 					text-decoration: none;
-					font-size: $fontSizeSm;
+					font-size: 14px;
 					color: #9baec8;
 					&:hover {
+						text-decoration: underline;
+					}
+					&:focus {
+						color: $accent;
 						text-decoration: underline;
 					}
 				}
