--- a/src/app/components/input/Input.module.scss
+++ b/src/app/components/input/Input.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables' as *;
+
 .input {
 	display: flex;
 	flex-direction: column;
@@ -7,19 +9,21 @@
 	label {
 		display: flex;
 		justify-content: flex-start;
-		font-size: 12px;
+		font-size: 14px;
 	}
 	input {
-		height: 35px;
+		height: 45px;
 		background-color: #131419;
 		border: none;
 		padding: 10px;
-		font-size: 12px;
+		font-size: 14px;
 		color: #9ab9c4;
 		border-radius: 4px;
-		border: 1px solid black;
 		&::placeholder {
 			color: lightgray;
+		}
+		&:focus {
+			outline: 2px solid $accent;
 		}
 	}
 }
